# internal/models/v2models/store_set.go
@@ -7,13 +7,14 @@ import (
 type StoreSet struct {
 	db *gorm.DB
 
-	ClusterStore         *ModelStore[Cluster]
-	EnvironmentStore     *ModelStore[Environment]
-	ChartStore           *ModelStore[Chart]
-	ChartVersionStore    *ModelStore[ChartVersion]
-	AppVersionStore      *ModelStore[AppVersion]
-	ChartReleaseStore    *ModelStore[ChartRelease]
-	PagerdutyIntegration *ModelStore[PagerdutyIntegration]
+	ClusterStore          *ModelStore[Cluster]
+	EnvironmentStore      *ModelStore[Environment]
+	ChartStore            *ModelStore[Chart]
+	ChartVersionStore     *ModelStore[ChartVersion]
+	AppVersionStore       *ModelStore[AppVersion]
+	ChartReleaseStore     *ModelStore[ChartRelease]
+	PagerdutyIntegration  *ModelStore[PagerdutyIntegration]
+	DatabaseInstanceStore *ModelStore[DatabaseInstance]
 
 	ChangesetEventStore *ChangesetEventStore
 }
@@ -22,13 +23,14 @@ func NewStoreSet(db *gorm.DB) *StoreSet {
 	return &StoreSet{
 		db: db,
 
-		ClusterStore:         &ModelStore[Cluster]{db: db, internalModelStore: clusterStore},
-		EnvironmentStore:     &ModelStore[Environment]{db: db, internalModelStore: environmentStore},
-		ChartStore:           &ModelStore[Chart]{db: db, internalModelStore: chartStore},
-		ChartVersionStore:    &ModelStore[ChartVersion]{db: db, internalModelStore: chartVersionStore},
-		AppVersionStore:      &ModelStore[AppVersion]{db: db, internalModelStore: appVersionStore},
-		ChartReleaseStore:    &ModelStore[ChartRelease]{db: db, internalModelStore: chartReleaseStore},
-		PagerdutyIntegration: &ModelStore[PagerdutyIntegration]{db: db, internalModelStore: pagerdutyIntegrationStore},
+		ClusterStore:          &ModelStore[Cluster]{db: db, internalModelStore: clusterStore},
+		EnvironmentStore:      &ModelStore[Environment]{db: db, internalModelStore: environmentStore},
+		ChartStore:            &ModelStore[Chart]{db: db, internalModelStore: chartStore},
+		ChartVersionStore:     &ModelStore[ChartVersion]{db: db, internalModelStore: chartVersionStore},
+		AppVersionStore:       &ModelStore[AppVersion]{db: db, internalModelStore: appVersionStore},
+		ChartReleaseStore:     &ModelStore[ChartRelease]{db: db, internalModelStore: chartReleaseStore},
+		PagerdutyIntegration:  &ModelStore[PagerdutyIntegration]{db: db, internalModelStore: pagerdutyIntegrationStore},
+		DatabaseInstanceStore: &ModelStore[DatabaseInstance]{db: db, internalModelStore: databaseInstanceStore},
 
 		ChangesetEventStore: &ChangesetEventStore{
 			ModelStore:                  &ModelStore[Changeset]{db: db, internalModelStore: changesetStore.internalModelStore},
